--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0",
+    "alpinejs": "^2.3.3",
     "normalize-scss": "^7.0.1",
     "tailwindcss": "^1.4.6",
     "turbolinks": "^5.2.0"
