--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@rails/ujs": "^6.0.0",
     "chart.js": "^2.9.3",
     "normalize-scss": "^7.0.1",
