--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@rails/ujs": "^6.0.0",
     "chart.js": "^2.9.3",
     "normalize-scss": "^7.0.1",
@@ -17,12 +16,16 @@
     "prod": "NODE_ENV=production yarn run webpack --progress --hide-modules --color --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "babel-plugin-minify-dead-code-elimination": "^0.5.1",
+    "babel-plugin-minify-simplify": "^0.5.1",
     "browser-sync": "^2.26.7",
     "compression-webpack-plugin": "^3.0.0",
     "laravel-mix": "^4.0.0",
     "resolve-url-loader": "2.3.1",
     "sass": "1.17.1",
     "sass-loader": "^7.3.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue-template-compiler": "^2.5.22"
   }
 }
