--- a/shard.yml
+++ b/shard.yml
@@ -34,4 +34,5 @@ dependencies:
   lucky_can:
     github: confact/lucky_can
   device_detector:
-    github: creadone/device_detector
+    github: confact/device_detector
+    commit: master
