cleaned up the marketing and starting site a bit

--- a/src/marketing/metadata.yml
+++ b/src/marketing/metadata.yml
@@ -1,4 +1,7 @@
 pages:
+  - name: Lightweight code that won't slow down your site
+    slug: lightweight-code-your-site
+    file: lightweight_script.md
   - name: Why Privacy Analytics?
     slug: why-privacy-analytics
     file: why_privacy_analytics.md
