--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "@rails/ujs": "^6.0.0",
     "chart.js": "^2.9.3",
+    "datamaps": "^0.5.9",
     "normalize-scss": "^7.0.1",
     "stimulus": "^1.1.1",
+    "stimulus-use": "^0.9.0",
     "tailwindcss": "^1.4.6",
     "tailwindcss-stimulus-components": "^1.0.2",
     "turbolinks": "^5.2.0"
