--- a/shard.yml
+++ b/shard.yml
@@ -52,3 +52,5 @@ dependencies:
     github: splattael/hashids.cr
   quoted_printable:
     github: arcage/crystal-quotedprintable
+  cron_scheduler:
+    github: kostya/cron_scheduler
