--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install postgres
-      run: apt-get install postgres-contrib
+      run: apt-get update && apt-get install postgres-contrib
     - name: Install shards
       run: shards install
     - name: Cache Crystal
