--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,10 @@ jobs:
           --health-retries 5
     steps:
     - uses: actions/checkout@v2
+    - name: Add postgres key
+      run: apt-get install wget ca-certificates && wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
+    - name: Add postgres to apt-get
+      run: echo "deb http://apt.postgresql.org/pub/repos/apt/ `lsb_release -cs`-pgdg main" >> /etc/apt/sources.list.d/pgdg.list
     - name: Install postgres
       run: apt-get update && apt-get install postgres-contrib
     - name: Install shards
