--- a/shard.yml
+++ b/shard.yml
@@ -38,7 +38,7 @@ dependencies:
     version: 1.5.5
   device_detector:
     github: confact/device_detector
-    commit: 92355cc32dc992ad6c11772445ee7bbb69d9ac84
+    version: ~> 0.4.0
   email:
     github: arcage/crystal-email
     version: 0.6.1
