--- a/shard.yml
+++ b/shard.yml
@@ -55,3 +55,6 @@ dependencies:
     github: arcage/crystal-quotedprintable
   cron_scheduler:
     github: kostya/cron_scheduler
+  clickhouse:
+    github: confact/clickhouse.cr
+    branch: master
