--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0",
-    "chart.js": "^2.9.3",
+    "apexcharts": "^3.19.3",
     "datamaps": "^0.5.9",
     "normalize-scss": "^7.0.1",
     "stimulus": "^1.1.1",
@@ -22,7 +22,7 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
     "babel-plugin-minify-simplify": "^0.5.1",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "2.26.7",
     "compression-webpack-plugin": "^3.0.0",
     "laravel-mix": "^4.0.0",
     "resolve-url-loader": "2.3.1",
