--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,29 +23,24 @@ jobs:
       image: crystallang/crystal:0.35.1
     services:
       # Label used to access the service container
+          services:
       postgres:
-        # Docker Hub image
-        image: postgres
-        # Provide the password for postgres
+        image: postgres:10-alpine
         env:
           POSTGRES_PASSWORD: postgres
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       clickhouse:
         # Docker Hub image
         image: yandex/clickhouse-server
     steps:
     - uses: actions/checkout@v2
-    - name: Add postgres key
-      run: apt-get update && apt-get install -y wget ca-certificates lsb-release && wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
-    - name: Add postgres to apt-get
-      run: echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list
-    - name: Install postgres
-      run: apt-get update && apt-get install -y postgresql-contrib libpq-dev
+    - name: Install PostgreSQL client
+      run: |
+        apt-get update
+        apt-get -yqq install libpq-dev postgresql-client
     - name: Install shards
       run: shards install
     - name: Cache Crystal
