--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "datamaps": "^0.5.9",
     "normalize-scss": "^7.0.1",
     "stimulus": "^1.1.1",
+    "stimulus-toggle-util": "^0.4.1",
     "stimulus-use": "^0.9.0",
     "tailwindcss": "^1.4.6",
     "tailwindcss-stimulus-components": "^1.0.2",
