added php_serializer shard

--- a/shard.yml
+++ b/shard.yml
@@ -59,3 +59,5 @@ dependencies:
   clickhouse:
     github: confact/clickhouse.cr
     branch: master
+  php_serializer:
+    github: reiswindy/php_serializer
