updated lucky to 0.24 and changed  dashboard design

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,10 +1,11 @@
 {
-    "/js/app.js": "/js/app.js?id=b4232cf26645c02382bf",
-    "/css/app.css": "/css/app.css?id=1d24937493b42000df2f",
-    "/js/track.js": "/js/track.js?id=22488ad35e699637e3ae",
+    "/js/app.js": "/js/app.js?id=b390d2ae055d54aef923",
+    "/css/app.css": "/css/app.css?id=297ebb224bffa20dd811",
+    "/js/kind.js": "/js/kind.js?id=89c6872ee7a218edb069",
+    "/js/kinder.js": "/js/kinder.js?id=6e6b59b100d398c73937",
     "/assets/images/promo.jpg": "/assets/images/promo.jpg?id=71dd37811462b55d1782",
-    "/assets/images/screenshot-window-min.png": "/assets/images/screenshot-window-min.png?id=84cc09d7c950156163a9",
-    "/assets/images/screenshot-window.png": "/assets/images/screenshot-window.png?id=e7a7c155298f19ef115d",
+    "/assets/images/screenshot-window-min.png": "/assets/images/screenshot-window-min.png?id=88b832b59b5553c9c0b6",
+    "/assets/images/screenshot-window.png": "/assets/images/screenshot-window.png?id=a1ce430188a8ff93b990",
     "/assets/svg/arrow-down-green.svg": "/assets/svg/arrow-down-green.svg?id=227aa217eb36f6e9069c",
     "/assets/svg/arrow-down-red.svg": "/assets/svg/arrow-down-red.svg?id=dd3d11dbfab2558506ac",
     "/assets/svg/arrow-down.svg": "/assets/svg/arrow-down.svg?id=15251d3fbdce3b5d4251",
