--- a/shard.yml
+++ b/shard.yml
@@ -58,6 +58,6 @@ dependencies:
     github: kostya/cron_scheduler
   clickhouse:
     github: confact/clickhouse.cr
-    branch: master
+    version: ~> 0.6.1
   php_serializer:
     github: reiswindy/php_serializer
